--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,249 @@
-django
-spacy
-fitz
+absl-py==0.9.0
+appdirs==1.4.4
+argon2-cffi==20.1.0
+asgiref==3.3.4
+astroid==2.3.3
+astunparse==1.6.3
+async-generator==1.10
+attrs==19.3.0
+autopep8==1.5.6
+backcall==0.2.0
+beautifulsoup4==4.9.1
+bidict==0.21.2
+bleach==3.3.0
+blis==0.7.4
+Brotli==1.0.9
+cachetools==4.1.1
+caer==1.9.8
+canaro==1.1.0
+catalogue==1.0.0
+certifi==2020.6.20
+cffi==1.14.5
+chardet==3.0.4
+chmod-monkey==1.1.1
+ci-info==0.2.0
+click==7.1.2
+cloudpickle==1.6.0
+colorama==0.4.3
+comtypes==1.1.7
+configobj==5.0.6
+configparser==5.0.2
+cryptography==3.4.7
+cycler==0.10.0
+cymem==2.0.5
+decorator==4.4.2
+defusedxml==0.7.1
+dill==0.3.3
+distlib==0.3.1
+dj-database-url==0.5.0
+Django==3.2.1
+django-classy-tags==2.0.0
+django-cms==3.8.0
+django-filer==2.0.2
+django-formtools==2.3
+django-js-asset==1.2.2
+django-mptt==0.12.0
+django-polymorphic==3.0.0
+django-sekizai==2.0.0
+django-treebeard==4.5.1
+djangocms-admin-style==2.0.2
+djangocms-background-media==1.0.0
+docx2txt==0.8
+easy-thumbnails==2.7.1
+easyocr==1.3.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
+entrypoints==0.3
+etelemetry==0.2.2
+filelock==3.0.12
+fitz==0.0.1.dev2
+Flask==1.1.1
+flatbuffers==1.12
+future==0.18.2
+gast==0.3.3
+geocoder==1.38.1
+google-api-core==1.16.0
+google-auth==1.20.0
+google-auth-oauthlib==0.4.1
+google-cloud-core==1.3.0
+google-cloud-translate==2.0.1
+google-pasta==0.2.0
+googleapis-common-protos==1.51.0
+grpcio==1.30.0
+gunicorn==19.9.0
+gym==0.18.0
+h5py==2.10.0
+httplib2==0.19.1
+huggingface-hub==0.0.8
+idna==2.10
+imageio==2.9.0
+imbalanced-learn==0.8.0
+imblearn==0.0
+imutils==0.5.4
+init==0.1.0
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isodate==0.6.0
+isort==4.3.21
+itsdangerous==1.1.0
+jaraco.context==4.0.0
+jedi==0.18.0
+jellyfish==0.8.2
+Jinja2==2.11.2
+joblib==0.14.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+lib50==1.1.11
+loc==0.0.2
+lxml==4.6.3
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+mccabe==0.6.1
+mistune==0.8.4
+more-itertools==8.7.0
+MouseInfo==0.1.3
+murmurhash==1.0.5
+mypy==0.812
+mypy-extensions==0.4.3
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5.1
+nibabel==3.2.1
+nipype==1.6.0
+notebook==6.3.0
+numpy==1.18.2
+oauthlib==3.1.0
+opt-einsum==3.3.0
+packaging==20.9
+pandas==1.0.3
+pandocfilters==1.4.3
+parso==0.8.2
+pathlib==1.0.1
+pathy==0.5.2
+pdf2image==1.15.1
+pdfminer.six==20201018
+pexpect==4.8.0
+phonenumbers==8.12.22
+pickleshare==0.7.5
+Pillow==8.2.0
+plac==1.1.3
+plotly==4.14.3
+poppler-utils==0.1.0
+preshed==3.0.5
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+protobuf==3.12.4
+prov==2.0.0
+psutil==5.8.0
+psycopg2==2.8.6
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.11
+PyAutoGUI==0.9.52
+pycodestyle==2.7.0
+pycparser==2.20
+pycryptodome==3.10.1
+pydantic==1.7.4
+pydot==1.4.2
+pygame==1.9.6
+PyGetWindow==0.0.9
+pyglet==1.5.0
+Pygments==2.8.1
+pyjokes==0.6.0
+pylint==2.4.4
+PyMsgBox==1.0.9
+PyMuPDF==1.18.13
+pyparsing==2.4.7
+PyPDF2==1.26.0
+pyperclip==1.8.2
+PyQt5Designer==5.14.1
+PyRect==0.1.4
+pyrsistent==0.17.3
+PyScreeze==0.1.26
+python-bidi==0.4.2
+python-dateutil==2.8.1
+pyttsx3==2.81
+pytube==10.7.0
+PyTweening==1.0.3
+pytz==2021.1
+PyWavelets==1.1.1
+pywin32==227
+pywinpty==1.0.1
+pyxnat==1.4
+PyYAML==5.3.1
+pyzmq==22.0.3
+ratelim==0.1.6
+rdflib==5.0.0
+regex==2021.4.4
+requests==2.24.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.6
+sacremoses==0.0.45
+scikit-image==0.18.1
+scikit-learn==0.24.2
+scipy==1.4.1
+seaborn==0.11.1
+Send2Trash==1.5.0
+shiboken2==5.14.1
+simplejson==3.17.2
+six==1.15.0
+sklearn==0.0
+smart-open==3.0.0
+sortedcontainers==2.3.0
+soupsieve==2.0
+spacy==2.3.5
+SpeechRecognition==3.8.1
+sprite==0.1.0
+sqlparse==0.4.1
+srsly==1.0.5
+submit50==3.0.0
+termcolor==1.1.0
+terminado==0.9.4
+terminal==0.4.0
+tesseract==0.1.3
+testpath==0.4.4
+thinc==7.4.5
+threadpoolctl==2.1.0
+tifffile==2021.4.8
+tmdbv3api==1.6.1
+tokenizers==0.10.2
+toml==0.10.2
+torch==1.8.1
+torchvision==0.9.1
+tornado==6.1
+tqdm==4.60.0
+traitlets==5.0.5
+traits==6.2.0
+transformers==4.6.0
+typed-ast==1.4.2
+typer==0.3.2
+typing-extensions==3.7.4.3
+Unidecode==1.1.2
+urllib3==1.25.10
+uuid==1.30
+virtualenv==20.3.1
+wasabi==0.8.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+whitenoise==5.2.0
+widgetsnbextension==3.5.1
+wikipedia==1.4.0
+wolframalpha==5.0.0
+wrapt==1.12.1
+xgboost==1.4.1
+xmltodict==0.12.0
+zipp==3.1.0
